# mirror-pool

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/actions/fetch-ptau/: action.yml
.github/actions/install-circom/: action.yml
.github/workflows/: ci.yml
circuits/: README.md  package-lock.json  package.json
circuits/circom/: membership.circom  merkle_proof.circom  merkle_proof_main.circom  poseidon1.circom  poseidon2.circom  withdraw.circom
circuits/ptau/: README.md
circuits/scripts/: setup.sh
circuits/test/: input.json  membership.test.js  merkle_parity.test.js  poseidon_parity.test.js  poseidon_vectors.json  util.js  withdraw.test.js  withdraw_vectors.json
crates/: README.md
crates/effective-k/: Cargo.toml
crates/effective-k/examples/: adversarial_sim.rs
crates/effective-k/src/: disclosure.rs  lib.rs
crates/ext-data/: Cargo.toml
crates/ext-data/src/: lib.rs
crates/parity-fixtures/: Cargo.toml
crates/parity-fixtures/src/: main.rs
crates/prover/: Cargo.toml
crates/prover/src/: lib.rs
crates/prover/tests/: prove_verify.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: ix.rs  lib.rs  note.rs  tree.rs
crates/sdk/tests/: e2e.rs  sdk.rs  tx_envelope.rs
crates/soak/: Cargo.toml
crates/soak/src/: assertions.rs  lib.rs  main.rs  report.rs  rpc.rs
crates/soak/src/phases/: mod.rs  preflight.rs  setup.rs  stake_round.rs  withdraw_round.rs
crates/vk-gen/: Cargo.toml
crates/vk-gen/src/: main.rs
docs/: ADVERSARIAL-SIM.md  SOAK.md  adversarial-sim-report.md  soak-report.md
docs/research/: 2026-07-16-behavioral-privacy-industry-practices.md  2026-07-16-behavioral-rounds-followup-proposal.md  anonymity-frontier-and-antisybil.md  behavioral-privacy-industry-practices.md  behavioral-rounds-followup-proposal.md  ci-zk-tests-wasmer-linker.md  cicd-and-testing.md  code-craft-and-repo-hygiene.md  crowd-depth-and-timing-mechanisms.md  prior-art.md  solana-execution-limits.md
docs/superpowers/plans/: 2026-07-15-circuits.md  2026-07-15-pool-program-foundations.md  2026-07-16-behavioral-rounds.md  2026-07-16-pooled-stake.md  2026-07-16-wire-zk-and-sdk.md  2026-07-17-effective-k-core.md  2026-07-17-pool-fee-uniformity.md  2026-07-17-timeout-gated-cancel.md  2026-07-18-finish-roadmap.md  2026-07-18-max-k-cap.md  2026-07-18-round-hardening-brief.md  2026-07-18-structure-polish-brief.md  2026-07-19-structure-polish.md  2026-07-20-soak.md  2026-07-21-adversarial-sim.md
docs/superpowers/specs/: 2026-07-15-mirror-pool-design.md  2026-07-16-pooled-stake-design.md  2026-07-17-effective-k-core-design.md  2026-07-17-pool-fee-uniformity-design.md  2026-07-17-timeout-gated-cancel-design.md  2026-07-18-round-hardening-design.md  2026-07-18-structure-polish-design.md  2026-07-20-soak-design.md  2026-07-21-adversarial-sim-design.md
programs/: README.md
programs/pool-program/: Cargo.toml
programs/pool-program/src/: action.rs  errors.rs  invariants.rs  lib.rs  merkle.rs  nullifier.rs  poseidon.rs  roots.rs  round.rs  state.rs  verifier.rs  vk.rs
programs/pool-program/src/instructions/: cancel_intent.rs  commit_intent.rs  deposit.rs  execute_round.rs  initialize_pool.rs  mod.rs
programs/pool-program/tests/: cancel_intent.rs  commit_intent.rs  common.rs  deposit.rs  execute_round.rs  initialize_pool.rs  max_k.rs  nullifier.rs  round_support.rs  scaffold.rs  stake_round.rs  verifier.rs  withdraw.rs
