[package]
name = "sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
# Canonical Poseidon(2) commitment (`pool_program::poseidon::hash2`) and the
# program's ID/account layouts/instruction types — reused, not re-derived, so
# the SDK's commitment/nullifier-hash/instruction encoding can never drift
# from what the on-chain program actually checks.
pool-program = { path = "../../programs/pool-program" }
# The single shared extDataHash implementation (also used by `pool-program`
# and `crates/parity-fixtures`) — re-exported here, never re-derived.
ext-data = { path = "../ext-data" }
# Real Groth16 proof generation for `withdraw` + the on-chain Solana byte
# encoding of the proof (`proof_a_to_solana_be`/`g1_to_solana_be`/`g2_to_solana_be`).
prover = { path = "../prover" }
solana-sdk = "~2.2"
rand = "0.8"

[dev-dependencies]
serde_json = "1"
# LiteSVM end-to-end test: exercises the SDK's public builders
# (`build_initialize_pool_ix`/`build_deposit_ix`/`build_withdraw_ix`) against
# a real on-chain program, not hand-built instructions (that's
# `pool-program/tests/withdraw.rs`'s job).
litesvm = "=0.6.1"
