[package]
name = "pool-program"
version = "0.1.0"
edition = "2021"

# cargo-build-sbf reads [package.metadata.solana] here as authoritative; a
# [workspace.metadata.solana] pin is only a fallback used when this is absent, so pin
# here directly. v1.54's bundled rustc/cargo can parse edition2024 manifests in the
# lockfile (e.g. indexmap 2.14.0); the default (~v1.51) can't even fetch the deps —
# this is needed regardless of the blake3 pin below.
[package.metadata.solana]
tools-version = "v1.54"

[lib]
crate-type = ["cdylib", "lib"]
name = "pool_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"   # re-exports solana_program::poseidon (native syscall + host impl)
# blake3 >=1.8.4 (pulled transitively via solana-blake3-hasher) needs digest 0.11,
# which needs edition2024 — unsupported by the cargo-build-sbf toolchain bundled with
# anchor-cli 0.31.1's platform-tools. Pin below that line.
blake3 = "=1.8.3"

[dev-dependencies]
litesvm = "=0.6.1"
solana-sdk = "~2.2"

# anchor-lang's #[program]/#[derive(Accounts)] macros emit cfg(feature = "...") checks
# for flags anchor-lang owns internally; declare them expected so rustc's check-cfg
# lint doesn't flag them as unexpected in the consuming crate.
[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(feature, values("cpi", "default", "idl-build", "no-entrypoint", "anchor-debug", "custom-heap", "custom-panic", "no-idl", "no-log-ix-name"))',
    'cfg(target_os, values("solana"))',
]
