[package]
name = "pool-program"
version = "0.1.0"
edition = "2021"

# cargo-build-sbf reads [package.metadata.solana] here as authoritative; a
# [workspace.metadata.solana] pin is only a fallback used when this is absent, so pin
# here directly. v1.54's bundled rustc/cargo can parse edition2024 manifests in the
# lockfile (e.g. indexmap 2.14.0); the default (~v1.51) can't even fetch the deps —
# this is needed regardless of the blake3 pin below.
[package.metadata.solana]
tools-version = "v1.54"

[lib]
crate-type = ["cdylib", "lib"]
name = "pool_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
# Required directly (not just transitively via anchor-lang) because the safe
# `#[account(zero_copy)]` codegen expands to a bare `#[derive(bytemuck::Pod)]` /
# `#[derive(bytemuck::Zeroable)]` on `Pool` (see programs/pool-program/src/state.rs) —
# `Pool` is ~3.9 KB and would blow the 4 KB SBF stack frame if Borsh-(de)serialized
# by value like a normal `#[account]` struct.
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
# blake3 >=1.8.4 (pulled transitively via solana-blake3-hasher) needs digest 0.11,
# which needs edition2024 — unsupported by the cargo-build-sbf toolchain bundled with
# anchor-cli 0.31.1's platform-tools. Pin below that line.
blake3 = "=1.8.3"
# solana-program 2.2.1 (pulled in by anchor-lang 0.31.1) has no `poseidon` module —
# Agave split it out into this standalone crate. It provides both the on-chain
# `sol_poseidon` syscall (cfg(target_os = "solana")) and a host implementation
# (ark-bn254 + light-poseidon) used by `cargo test`. Track solana-sdk's "~2.2" line.
solana-poseidon = "~2.2"
# On-chain Groth16 verification of the withdraw proof via the `alt_bn128` syscalls
# (host fallback used by `cargo test`); byte layout must match `crates/prover`'s
# `proof_a_to_solana_be`/`g1_to_solana_be`/`g2_to_solana_be` and `crates/vk-gen`'s
# generated `vk.rs` exactly.
groth16-solana = "0.2"

[dev-dependencies]
litesvm = "=0.6.1"
solana-sdk = "~2.2"
# Generates a real withdraw proof in-test to exercise `verifier::verify_withdraw`
# end-to-end; see `ensure_build_artifacts` in tests/verifier.rs (mirrors prover's
# own build guard).
prover = { path = "../../crates/prover" }
serde_json = "1"

# anchor-lang's #[program]/#[derive(Accounts)] macros emit cfg(feature = "...") checks
# for flags anchor-lang owns internally; declare them expected so rustc's check-cfg
# lint doesn't flag them as unexpected in the consuming crate.
[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(feature, values("cpi", "default", "idl-build", "no-entrypoint", "anchor-debug", "custom-heap", "custom-panic", "no-idl", "no-log-ix-name"))',
    'cfg(target_os, values("solana"))',
]
